--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,10 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
 }
 
-.input{
-  
+.input {
+  height: 100px;
+  width: 250px;
+  background-color: yellow;
 }
